--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -7,8 +7,10 @@
           <h3 class="text-center">{{numberOfPlayers}} player(s)</h3>
           {{#if canShowStartGame}}
             <p class="text-center">
-              <button class="btn btn-primary btn-block">COMEÇAR</button>
+              <button class="btn btn-primary btn-block" data-start>COMEÇAR</button>
             </p>
+          {{else}}
+            <button class="btn btn-danger btn-block" data-clear>LIMPAR RANKING</button>
           {{/if}}
           {{> ranking}}
         {{else}}
