--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,8 @@
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta charset="utf-8">
   <title>Dale Bomba Play</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
   <div class="main container">
