--- a/client/index.html
+++ b/client/index.html
@@ -1,19 +1,8 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta charset="utf-8">
-  <title>Dale Bomba Play</title>
+  <title>Dale Bomba Game</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 <body>
-  <div class="main container">
-  </div>
-  <footer class="footer">
-    <p class="text-center">
-      <small>
-        Autor <a href="https://github.com/caio-ribeiro-pereira" target="_blank">Caio Ribeiro Pereira</a>
-        <br>
-        <a href="https://github.com/caio-ribeiro-pereira/dalebombaplay" target="_blank">Veja o código-fonte aqui</a>
-      </small>
-    </p>
-  </footer>
 </body>
