--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -16,8 +16,8 @@
           </div>
           {{> ranking}}
         {{else}}
-          <h3 class="text-center">
-            <i class="ion-sad bg-icon"></i>
+          <h3 class="text-center dark">
+            <i class="ion-podium bg-icon"></i>
             <br>
             Nenhum player na lista
           </h3>
