--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -14,7 +14,7 @@
               LIMPAR
             </button>
           </div>
-          {{> ranking}}
+          {{> rankingList}}
         {{else}}
           <h4 class="text-center dark">
             <i class="ion-podium bg-icon"></i>
@@ -24,6 +24,5 @@
         {{/if}}
       </div>
     {{/ionContent}}
-    {{> footer}}
   {{/ionView}}
 </template>
