added wait time

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -4,17 +4,10 @@
     {{#ionContent}}
       <div class="list padding">
         {{#if numberOfPlayers}}
-          <div class="button-bar">
-            {{#if canShowStartGame}}
-              <button class="button button-balanced button-block button-large ion-play" data-start disabled="{{isGameNotRunning}}">
-                COMEÇAR
-              </button>
-            {{/if}}
-            <button class="button button-assertive button-block button-large ion-android-delete" data-clear disabled="{{isGameNotRunning}}">
-              LIMPAR
-            </button>
-          </div>
-          {{> rankingList}}
+          <button class="button button-assertive button-block button-large ion-android-delete" data-clear disabled="{{isGameNotRunning}}">
+            LIMPAR
+          </button>
+          {{> ranking}}
         {{else}}
           <h4 class="text-center dark">
             <i class="ion-podium bg-icon"></i>
