--- a/client/home/index.html
+++ b/client/home/index.html
@@ -4,6 +4,7 @@
     {{#ionContent}}
       {{#if isPlaying}}
         {{> gameboard}}
+        {{> ranking}}
       {{else}}
         {{#if isFinished}}
           {{> finished}}
